--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -10,7 +10,7 @@ repository:
   description: description of repo
 
   # A URL with more information about the repository
-  homepage: https://example.github.io/
+  homepage: https://www.testcontainers.org
 
   # A comma-separated list of topics to set on the repository
   topics: github, probot
