chore: change topics

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -13,7 +13,7 @@ repository:
   homepage: https://www.testcontainers.org
 
   # A comma-separated list of topics to set on the repository
-  topics: github, probot
+  topics: OSS Governance, settings
 
   # Either `true` to make the repository private, or `false` to make it public.
   private: false
