--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -82,10 +82,12 @@ milestones:
 # Collaborators: give specific users access to this repository.
 # See https://docs.github.com/en/rest/reference/repos#add-a-repository-collaborator for available options
 collaborators:
-  # - username: bkeepers
-  #   permission: push
-  # - username: hubot
-  #   permission: pull
+  - username: eddumelendez
+    permission: admin
+  - username: kiview
+    permission: admin
+  - username: mdelapenya
+    permission: admin
 
   # Note: `permission` is only valid on organization-owned repositories.
   # The permission to grant the collaborator. Can be one of:
