--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -99,7 +99,7 @@ collaborators:
 
 # See https://docs.github.com/en/rest/reference/teams#add-or-update-team-repository-permissions for available options
 teams:
-  - name: core
+  - name: core-team
     # The permission to grant the team. Can be one of:
     # * `pull` - can pull, but not push to or administer this repository.
     # * `push` - can pull and push, but not administer this repository.
@@ -107,7 +107,9 @@ teams:
     # * `maintain` - Recommended for project managers who need to manage the repository without access to sensitive or destructive actions.
     # * `triage` - Recommended for contributors who need to proactively manage issues and pull requests without write access.
     permission: admin
-  - name: docs
+  - name: go-team
+    permission: push
+  - name: java-team
     permission: push
 
 branches:
