chore: rename to main branch

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -113,7 +113,7 @@ teams:
     permission: push
 
 branches:
-  - name: master
+  - name: main
     # https://docs.github.com/en/rest/reference/repos#update-branch-protection
     # Branch Protection settings. Set to null to disable
     protection:
