--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -107,7 +107,7 @@ teams:
     # * `maintain` - Recommended for project managers who need to manage the repository without access to sensitive or destructive actions.
     # * `triage` - Recommended for contributors who need to proactively manage issues and pull requests without write access.
     permission: admin
-  - name: go-team
+  - name: tc-experiments/go-team
     permission: triage
   - name: java-team
     permission: push
