--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -126,6 +126,7 @@ branches:
   - name: main
     # https://docs.github.com/en/rest/reference/repos#update-branch-protection
     # Branch Protection settings. Set to null to disable
+    # The branch protection must be initialised using the UI first.
     protection:
       # Required. Require at least one approving review on a pull request, before merging. Set to null to disable.
       required_pull_request_reviews:
