--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -61,7 +61,7 @@ repository:
 labels:
   - name: type/bug
     color: '#CC0000'
-    description: An issue with the system 🐛.
+    description: An issue with the system.
 
   - name: type/feature
     # If including a `#`, make sure to wrap it with quotes!
