--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -48,11 +48,11 @@ repository:
 
   # Either `true` to enable automated security fixes, or `false` to disable
   # automated security fixes.
-  enable_automated_security_fixes: true
+  enable_automated_security_fixes: false
 
   # Either `true` to enable vulnerability alerts, or `false` to disable
   # vulnerability alerts.
-  enable_vulnerability_alerts: true
+  enable_vulnerability_alerts: false
 
 # Labels: define labels for Issues and Pull Requests
 labels:
