--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -19,14 +19,14 @@ repository:
   private: false
 
   # Either `true` to enable issues for this repository, `false` to disable them.
-  has_issues: false
+  has_issues: true
 
   # Either `true` to enable projects for this repository, or `false` to disable them.
   # If projects are disabled for the organization, passing `true` will cause an API error.
-  has_projects: false
+  has_projects: true
 
   # Either `true` to enable the wiki for this repository, `false` to disable it.
-  has_wiki: false
+  has_wiki: true
 
   # Either `true` to enable downloads for this repository, `false` to disable them.
   has_downloads: false
@@ -36,18 +36,18 @@ repository:
 
   # Either `true` to allow squash-merging pull requests, or `false` to prevent
   # squash-merging.
-  allow_squash_merge: false
+  allow_squash_merge: true
 
   # Either `true` to allow merging pull requests with a merge commit, or `false`
   # to prevent merging pull requests with merge commits.
-  allow_merge_commit: true
+  allow_merge_commit: false
 
   # Either `true` to allow rebase-merging pull requests, or `false` to prevent
   # rebase-merging.
   allow_rebase_merge: false
 
   # Either `true` to enable automatic deletion of branches on merge, or `false` to disable
-  delete_branch_on_merge: false
+  delete_branch_on_merge: true
 
   # Either `true` to enable automated security fixes, or `false` to disable
   # automated security fixes.
@@ -143,9 +143,9 @@ branches:
         # Required. The list of status checks to require in order to merge into this branch
         contexts: []
       # Required. Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
-      enforce_admins: null
+      enforce_admins: true
       # Prevent merge commits from being pushed to matching branches
-      required_linear_history: null
+      required_linear_history: true
       # Required. Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
       restrictions:
         apps: []
