chore: remove whitespace in settings

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -13,7 +13,7 @@ repository:
   homepage: https://www.testcontainers.org
 
   # A comma-separated list of topics to set on the repository
-  topics: OSS Governance,settings
+  topics: opensource,governance,settings
 
   # Either `true` to make the repository private, or `false` to make it public.
   private: false
