--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -72,7 +72,7 @@ labels:
     color: '#a2eeef'
     description: New feature or request
   
-  - name: good-first-issue
+  - name: good first issue
     color: '#FEF2C0'
     description: Want to contribute to testcontainers? Start from here
 
@@ -88,7 +88,7 @@ labels:
     color: '#e4e669'
     description: Not accepted or invalid for any reason.
 
-  - name: low-hanging-fruit
+  - name: low hanging fruit
     color: '#FFC300'
     description: Issues that are good for newcomers.
  
