chore: more renames

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -99,26 +99,32 @@ labels:
   - name: type/bc-break
     color: '#c91873'
     description: Causing compatibility issues.
+    new_name: breaking change
 
   - name: type/docs
     color: '#ede889'
     description: Docs, docs, docs.
+    new_name: docs
 
   - name: type/feature
     color: '#11c134'
     description: New functionality or new behaviors on the existing one
+    new_name: enhancement2
 
   - name: type/housekeeping
     color: '#c87eea'
     description: Changes that do not impact the existing functionality
+    new_name: housekeeping
   
   - name: type/question
     color: '#8ba7f4'
     description: Have you tried our Slack (https://testcontainers.slack.com)?
+    new_name: question
   
   - name: type/security
     color: '#D93F0B'
     description: Vulnerabilities in dependencies or in the library itself
+    new_name: security
   
   - name: type/test-flakiness
     color: '#602A4F'
