chore: rename label

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -125,11 +125,9 @@ labels:
     description: Vulnerabilities in dependencies or in the library itself
     new_name: security
   
-  - name: type/test-flakiness
+  - name: test flakiness
     color: '#602A4F'
     description: Report a flaky test that happens on the CI
-    # Provide a new name to rename an existing label
-    new_name: test flakiness
   
   - name: wontfix
     color: '#ffffff'
