--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -72,10 +72,9 @@ labels:
     color: '#a2eeef'
     description: New feature or request
   
-  - name: good-first-issue
+  - name: good first issue
     color: '#FEF2C0'
     description: Want to contribute to testcontainers? Start from here
-    new_name: good first issue
 
   - name: hacktoberfest
     color: '#fbca04'
@@ -93,40 +92,33 @@ labels:
     color: '#B52710'
     description: Issues regarding podman.
 
-  - name: type/bc-break
+  - name: breaking change
     color: '#c91873'
     description: Causing compatibility issues.
-    new_name: breaking change
 
-  - name: type/docs
+  - name: documentation
     color: '#ede889'
     description: Docs, docs, docs.
-    new_name: documentation
 
-  - name: type/feature
+  - name: feature
     color: '#11c134'
     description: New functionality or new behaviors on the existing one
-    new_name: feature
 
-  - name: type/housekeeping
+  - name: chore
     color: '#c87eea'
     description: Changes that do not impact the existing functionality
-    new_name: chore
 
-  - name: type/question
+  - name: question
     color: '#8ba7f4'
     description: Have you tried our Slack (https://testcontainers.slack.com)?
-    new_name: question
   
-  - name: type/security
+  - name: security
     color: '#D93F0B'
     description: Vulnerabilities in dependencies or in the library itself
-    new_name: secutiry
   
-  - name: type/test-flakiness
+  - name: test flakiness
     color: '#602A4F'
     description: Report a flaky test that happens on the CI
-    new_name: test flakiness
   
   - name: wontfix
     color: '#ffffff'
