--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -189,5 +189,5 @@ branches:
       # Required. Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
       restrictions:
         apps: []
-        users: [mdelapenya]
+        users: [mdelapenya, kiview, eddumelendez]
         teams: []
