--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -123,6 +123,7 @@ labels:
   - name: wontfix
     color: '#ffffff'
     description: This will not be worked on
+    new_name: "won't fix"
 
 # Collaborators: give specific users access to this repository.
 # See https://docs.github.com/en/rest/reference/repos#add-a-repository-collaborator for available options
